--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "random-words": "^2.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
