--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "random-words": "^2.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.0",
     "tailwind-merge": "^2.2.1"
   },
